build: configure jvm, compiler, test output and refactor service plugin